# 20260116T172545_Artbsides_CajuBeneficiosApi

./: Dockerfile  Makefile  README.md  compose.development.yml  compose.yml  pyproject.toml
.docs/: caju-beneficios-api.postman_environment.localhost.json
.github/workflows/: codeql.yml  on-push-tags.yml  on-push.yml  sonarcloud.yml
.k8s/production/: deployment.yml  kustomization.yml  secrets.yml  service.yml
.k8s/production/secrets/: .secrets.yml
.k8s/staging/: deployment.yml  kustomization.yml  secrets.yml  service.yml
.k8s/staging/secrets/: .secrets.yml  .sops.yml
.monitoring/grafana/: prometheus-datasource.yml
.monitoring/grafana/dashboards/: dashboard.yml
.monitoring/grafana/dashboards/caju-beneficios-api/: metrics.json
.monitoring/prometheus/: alerts.yml  prometheus.yml
api/: main.py
api/confs/: database.py  settings.py
api/exceptions/: exception_handler.py
api/exceptions/errors/: base_exception.py  http_exception.py  internal_server.py  method_not_allowed.py  not_found.py  request_validation.py  unauthorized_token.py
api/modules/accounts/v1/: repository.py  service.py
api/modules/accounts/v1/dtos/: account.py
api/modules/accounts/v1/entities/: account.py  account_balance.py
api/modules/merchants/v1/: repository.py  service.py
api/modules/merchants/v1/dtos/: merchant.py
api/modules/merchants/v1/entities/: merchant.py
api/modules/merchants/v1/enums/: category_codes.py
api/modules/transactions/v1/: controller.py  service.py
api/modules/transactions/v1/dtos/: authorizer.py
api/modules/transactions/v1/enums/: transaction_code.py
api/routers/: __init__.py  router.py
api/shared_resources/entities/: timestamp.py
api/utils/: authorization.py
seeds/: main.py
seeds/entities/: accounts.py  merchants.py
tests/unit/exceptions/: exception_handler.py
tests/unit/exceptions/errors/: base_exception.py  http_exception.py  internal_server_error.py  not_found_error.py  request_validation_error.py  unauthorized_token_error.py
tests/unit/routers/: router.py
tests/unit/shared_resources/entities/: timestamp.py
tests/unit/utils/: authorization.py
(+2 files in other folders)
